# rgb-schemata

./: Cargo.toml  LICENSE  README.md  _typos.toml
.github/workflows/: build.yml  run.yaml  test.yml
examples/: ia_rgb20.rs  rgb20-simplest.contract.rgb  rgb20-simplest.contract.rgba  rgb20-simplest.iimpl.rgb  rgb20-simplest.rs  rgb20-simplest.schema.rgb  rgb20-token.rs  rgb20.rs  rgb21-simplest.contract.rgb  rgb21-simplest.contract.rgba  rgb21-token.rs  rgb21.rs  rgb25-simplest.contract.rgb  rgb25-simplest.contract.rgba  rgb25-token.rs  rgb25.rs
interfaces/: RGB20.rgb  RGB20.rgba  RGB20Fixed.rgb  RGB20Fixed.rgba  RGB21.rgb  RGB21.rgba  RGB21Unique.rgb  RGB21Unique.rgba  RGB25.rgb  RGB25.rgba  RGB25Base.rgb  RGB25Base.rgba
schemata/: CollectibleFungibleAsset.rgb  CollectibleFungibleAsset.rgba  CollectibleFungibleAssets-RGB25.rgb  CollectibleFungibleAssets-RGB25.rgba  CollectibleFungibleAssets.rgb  CollectibleFungibleAssets.rgba  InflatableAssets.rgb  InflatableAssets.rgba  NonInflatableAsset-RGB20.rgb  NonInflatableAsset-RGB20.rgba  NonInflatableAsset.rgba  NonInflatableAssets-RGB20.rgb  NonInflatableAssets-RGB20.rgba  NonInflatableAssets.rgb  NonInflatableAssets.rgba  UniqueDigitalAsset-RGB20.rgb  UniqueDigitalAsset-RGB20.rgba  UniqueDigitalAsset-RGB21.rgb  UniqueDigitalAsset-RGB21.rgba  UniqueDigitalAsset.rgb  UniqueDigitalAsset.rgba  UniqueDigitalCollection-RGB21.rgb  UniqueDigitalCollection-RGB21.rgba  UniqueDigitalCollection.rgb  UniqueDigitalCollection.rgba  rgb20-simplest.toml
src/: cfa.rs  ia.rs  lib.rs  main.rs  nia.rs  temp.rs  uda.rs  udc.rs
test/: ia-rgb20-example.rgb  ia-rgb20-example.rgba  rgb20-example.rgb  rgb20-example.rgba  rgb20-inflatable.rgb  rgb20-inflatable.rgba  rgb21-example.rgb  rgb21-example.rgba  rgb25-example.rgb  rgb25-example.rgba
