[package]
name = "rgb-schemata"
version = "0.11.0-beta.6"
description = "Collection of the official RGB smart contract schemata"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
homepage = "https://github.com/RGB-WG"
repository = "https://github.com/RGB-WG/rgb-schemata"
rust-version = "1.69.0" # Due to TOML dependency in amplify crate
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "schemata"

[dependencies]
amplify = "4.6.0"
strict_encoding = "2.7.0-beta.4"
strict_types = "2.7.0-beta.4"
aluvm = "0.11.0-beta.6"
bp-core = "0.11.0-beta.6"
rgb-std = { version = "0.11.0-beta.6", features = ["serde"] }
rgb-interfaces = "0.11.0-beta.6"
chrono = "0.4.37"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"

[dev-dependencies]
chrono = "0.4.31"
serde_yaml = "0.9.27"

[features]
default = []
all = ["log", "fs"]
log = ["aluvm/log"]
fs = ["rgb-std/fs"]

[patch.crates-io]
bp-consensus = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
bp-invoice = { git = "https://github.com/BP-WG/bp-std", branch = "master" }
rgb-core = { git = "https://github.com/RGB-WG/rgb-core", branch = "mining" }
rgb-invoice = { git = "https://github.com/RGB-WG/rgb-std", branch = "mining" }
rgb-std = { git = "https://github.com/RGB-WG/rgb-std", branch = "mining" }
rgb-interfaces = { git = "https://github.com/RGB-WG/rgb-interfaces.git", branch = "mining" }
