[package]
name = "rgb-schemata"
version = "0.11.0-beta.8"
description = "Collection of the official RGB smart contract schemata"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
homepage = "https://github.com/RGB-WG"
repository = "https://github.com/RGB-WG/rgb-schemata"
rust-version = "1.76.0" # Due to rgb-std
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[[bin]]
name = "rgb-schemata"
required-features = ["fs"]

[lib]
name = "schemata"

[dependencies]
amplify = "4.7.0"
strict_encoding = "2.7.0"
strict_types = "2.7.1"
aluvm = "0.11.0-beta.9"
bp-core = "0.11.0-beta.9"
rgb-std = { version = "0.11.0-beta.9", features = ["serde", "fs"] }
rgb-interfaces = { version = "0.11.0-beta.8", features = ["serde", "rand", "fs"] }
chrono = "0.4.38"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"

[dev-dependencies]
chrono = "0.4.38"
serde_yaml = "0.9.33"

[features]
default = []
all = ["log", "fs"]
log = ["aluvm/log"]
fs = ["rgb-std/fs"]

[patch.crates-io]
commit_verify = { git = "https://github.com/LNP-BP/client_side_validation", branch = "develop" }
single_use_seals = { git = "https://github.com/LNP-BP/client_side_validation", branch = "develop" }
strict_types = { git = "https://github.com/strict-types/strict-types", branch = "develop" }
aluvm = { git = "https://github.com/AluVM/rust-aluvm", branch = "develop" }
bp-consensus = { git = "https://github.com/BP-WG/bp-core", branch = "develop" }
bp-dbc = { git = "https://github.com/BP-WG/bp-core", branch = "develop" }
bp-seals = { git = "https://github.com/BP-WG/bp-core", branch = "develop" }
bp-core = { git = "https://github.com/BP-WG/bp-core", branch = "develop" }
bp-invoice = { git = "https://github.com/BP-WG/bp-std", branch = "develop" }
rgb-core = { git = "https://github.com/RGB-WG/rgb-core", branch = "feat/asm" }
rgb-invoice = { git = "https://github.com/RGB-WG/rgb-std", branch = "feat/fungible-nonconf" }
rgb-std = { git = "https://github.com/RGB-WG/rgb-std", branch = "feat/fungible-nonconf" }
rgb-interfaces = { git = "https://github.com/RGB-WG/rgb-interfaces", branch = "feat/fungible-nonconf" }
