[package]
name = "rgb-schemata"
version = "0.11.0-beta.9"
description = "Collection of the official RGB smart contract schemata"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
homepage = "https://github.com/RGB-WG"
repository = "https://github.com/RGB-WG/rgb-schemata"
rust-version = "1.77.0" # Due to rgb-std
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[[bin]]
name = "rgb-schemata"
required-features = ["fs"]

[lib]
name = "schemata"

[dependencies]
amplify = "4.7.0"
strict_encoding = "~2.7.0"
strict_types = "~2.7.2"
aluvm = "0.11.0-beta.9"
bp-core = "0.11.1-alpha.1"
rgb-std = { version = "0.11.1-alpha.1", features = ["serde", "fs"] }
rgb-interfaces = "0.11.1-alpha.1"
chrono = "0.4.38"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"

[dev-dependencies]
chrono = "0.4.38"
serde_yaml = "0.9.33"

[features]
default = []
all = ["log", "fs"]
log = ["aluvm/log"]
fs = ["rgb-std/fs"]
